--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -273,6 +273,9 @@
                 case 'home':
                     window.location.href = "{:U('index')}";
                     break;
+                case 'user':
+                    window.location.href = "{:U('user')}";
+                    break;
             }
 
             $("#alertDialog").modal('hide');
