Home user info page -- hide unused buttons.

--- a/Application/Home/View/Index/user_info.html
+++ b/Application/Home/View/Index/user_info.html
@@ -6,7 +6,7 @@
                     <li class="active"><a href="javascript:void(0)">
                         <center>我的订单</center>
                     </a></li>
-                    <li><a href="javascript:void(0)">
+                    <!--<li><a href="javascript:void(0)">
                         <center>个人信息</center>
                     </a></li>
                     <li><a href="javascript:void(0)">
@@ -20,7 +20,7 @@
                     </a></li>
                     <li><a href="javascript:void(0)">
                         <center>绑定设置</center>
-                    </a></li>
+                    </a></li>-->
                 </ul>
             </div>
         </div>
